<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
    android:id="@+id/menu_top"
    android:checkableBehavior="single">
    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/account_nav"
                android:icon="@drawable/ic_account_nav_24dp"
                android:title="@string/update_acc_info" />
            <item
                android:id="@+id/updatePass_nav"
                android:icon="@drawable/ic_lock_nav_24dp"
                android:title="@string/update_pass" />
        </menu>
    </item>
    </group>
    <group
        android:id="@+id/menu_middle"
        android:checkableBehavior="single">
    <item android:title="@string/contactus">
        <menu>
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_assignment_nav_24dp"
                android:title="@string/privacy_statement" />
            <item
                android:id="@+id/nav_callus"
                android:icon="@drawable/ic_call_nav_24dp"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_nav_24dp"
                android:title="@string/about" />
        </menu>
    </item>
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/logout_nav"
            android:icon="@drawable/ic_power_nav_24dp"
            android:title="تسجيل الخروج" >
        </item>
    </group>
</menu>
